--- a/index.ipynb
+++ b/index.ipynb
@@ -180,6 +180,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# plot graph for learning curve and loss curve from baseline and best_model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
