save model template
save model

--- a/index.ipynb
+++ b/index.ipynb
@@ -186,10 +186,64 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_115\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " conv2d_183 (Conv2D)         (None, 26, 26, 32)        320       \n",
+      "                                                                 \n",
+      " conv2d_184 (Conv2D)         (None, 24, 24, 64)        18496     \n",
+      "                                                                 \n",
+      " max_pooling2d_107 (MaxPooli  (None, 12, 12, 64)       0         \n",
+      " ng2D)                                                           \n",
+      "                                                                 \n",
+      " conv2d_185 (Conv2D)         (None, 10, 10, 64)        36928     \n",
+      "                                                                 \n",
+      " flatten_92 (Flatten)        (None, 6400)              0         \n",
+      "                                                                 \n",
+      " dense_166 (Dense)           (None, 10)                64010     \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 119,754\n",
+      "Trainable params: 119,754\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "# summarise best model\n",
+    "best_model.summary()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Export Model \n",
+    "!mkdir -p saved_model\n",
+    "best_model.save('saved_model/sensor_model')\n",
+    "best_model.save('saved_model/sensor_model.h5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save the weight for the Js Model\n",
+    "best_model.save_weights('./checkpoints/my_checkpoint')\n"
+   ]
   },
   {
    "cell_type": "code",
