--- a/index.ipynb
+++ b/index.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,50 +21,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fold 1\n",
-      "Model 1\n",
-      "374/374 [==============================] - 7s 18ms/step - loss: 0.4379 - accuracy: 0.8771 - val_loss: 0.2276 - val_accuracy: 0.9339\n",
-      "938/938 [==============================] - 3s 4ms/step - loss: 0.2276 - accuracy: 0.9339\n",
-      "Validation accuracy: 0.9338666796684265\n",
-      "Model 2\n",
-      "374/374 [==============================] - 20s 52ms/step - loss: 0.2904 - accuracy: 0.9099 - val_loss: 0.1036 - val_accuracy: 0.9689\n",
-      "938/938 [==============================] - 8s 8ms/step - loss: 0.1036 - accuracy: 0.9689\n",
-      "Validation accuracy: 0.9688666462898254\n",
-      "Model 3\n",
-      "374/374 [==============================] - 37s 98ms/step - loss: 0.2665 - accuracy: 0.9188 - val_loss: 0.0893 - val_accuracy: 0.9731\n",
-      "938/938 [==============================] - 11s 12ms/step - loss: 0.0893 - accuracy: 0.9731\n",
-      "Validation accuracy: 0.9730666875839233\n",
-      "Fold 2\n",
-      "Model 1\n",
-      "374/374 [==============================] - 7s 18ms/step - loss: 0.1807 - accuracy: 0.9485 - val_loss: 0.1352 - val_accuracy: 0.9612\n",
-      "938/938 [==============================] - 3s 3ms/step - loss: 0.1352 - accuracy: 0.9612\n",
-      "Validation accuracy: 0.9612333178520203\n",
-      "Model 2\n",
-      "374/374 [==============================] - 19s 50ms/step - loss: 0.0984 - accuracy: 0.9700 - val_loss: 0.0819 - val_accuracy: 0.9748\n",
-      "938/938 [==============================] - 7s 8ms/step - loss: 0.0819 - accuracy: 0.9748\n",
-      "Validation accuracy: 0.9747666716575623\n",
-      "Model 3\n",
-      "374/374 [==============================] - 36s 96ms/step - loss: 0.0811 - accuracy: 0.9753 - val_loss: 0.0661 - val_accuracy: 0.9794\n",
-      "938/938 [==============================] - 11s 12ms/step - loss: 0.0661 - accuracy: 0.9794\n",
-      "Validation accuracy: 0.9794333577156067\n",
-      "[(0, 0, 0.9338666796684265), (0, 1, 0.9688666462898254), (0, 2, 0.9730666875839233), (1, 0, 0.9612333178520203), (1, 1, 0.9747666716575623), (1, 2, 0.9794333577156067)]\n",
-      "5\n",
-      "[(0, 0, 0.9338666796684265), (0, 1, 0.9688666462898254), (0, 2, 0.9730666875839233), (1, 0, 0.9612333178520203), (1, 1, 0.9747666716575623), (1, 2, 0.9794333577156067)]\n",
-      "5\n",
-      "<keras.engine.sequential.Sequential object at 0x000002BE1071D750>\n",
-      "Best model is model 6\n",
-      "313/313 [==============================] - 4s 12ms/step - loss: 0.0601 - accuracy: 0.9810\n",
-      "Test accuracy: 0.9810000061988831\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Template\n",
     "import tensorflow as tf\n",
@@ -186,38 +145,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model: \"sequential_115\"\n",
-      "_________________________________________________________________\n",
-      " Layer (type)                Output Shape              Param #   \n",
-      "=================================================================\n",
-      " conv2d_183 (Conv2D)         (None, 26, 26, 32)        320       \n",
-      "                                                                 \n",
-      " conv2d_184 (Conv2D)         (None, 24, 24, 64)        18496     \n",
-      "                                                                 \n",
-      " max_pooling2d_107 (MaxPooli  (None, 12, 12, 64)       0         \n",
-      " ng2D)                                                           \n",
-      "                                                                 \n",
-      " conv2d_185 (Conv2D)         (None, 10, 10, 64)        36928     \n",
-      "                                                                 \n",
-      " flatten_92 (Flatten)        (None, 6400)              0         \n",
-      "                                                                 \n",
-      " dense_166 (Dense)           (None, 10)                64010     \n",
-      "                                                                 \n",
-      "=================================================================\n",
-      "Total params: 119,754\n",
-      "Trainable params: 119,754\n",
-      "Non-trainable params: 0\n",
-      "_________________________________________________________________\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# summarise best model\n",
     "best_model.summary()\n"
@@ -229,7 +159,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Export Model \n",
+    "# Export Model for using in tensorflow.js\n",
     "!mkdir -p saved_model\n",
     "best_model.save('saved_model/sensor_model')\n",
     "best_model.save('saved_model/sensor_model.h5')"
@@ -243,6 +173,15 @@
    "source": [
     "# Save the weight for the Js Model\n",
     "best_model.save_weights('./checkpoints/my_checkpoint')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# upload model to server to download it on tensorflow js"
    ]
   },
   {
