rename notebook file and add md header

--- a/DL-Modelle.ipynb
+++ b/DL-Modelle.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Sensor Based Activity Recoginition \n",
+    "Challenge: cdl1 - Sensor based Activity Recognition  \n",
+    "Team: Lea Bütler, Manjavy Kirupa, Etienne Roulet, Si Ben Tran  \n",
+    "\n",
+    "Aufgabe: DL Modell erstellen\n",
+    "\n",
+    "Hier in diesem Notebook erstellen wir unsere Deep Learning Modelle."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -208,7 +222,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4,
   "vscode": {
