--- a/DL-Modelle.ipynb
+++ b/DL-Modelle.ipynb
@@ -273,13 +273,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# without rolling windows but with timesteps\n",
     "from sklearn.model_selection import train_test_split\n",
     "from keras.utils import to_categorical\n",
     "\n",
     "X = df.values[:, 1:13]\n",
     "y = df.values[:, 13]\n",
     "\n",
-    "# Reshape X to 4D format (samples, timesteps, features)\n",
+    "# Reshape X to 3D format (samples, timesteps, features)\n",
     "timesteps = 1  # You can choose a different number of timesteps based on the nature of your data\n",
     "n_features = X.shape[1]\n",
     "X = X.reshape(-1, timesteps, n_features)\n",
@@ -289,7 +290,48 @@
     "\n",
     "# Convert the labels to one-hot encoding\n",
     "y_train = to_categorical(y_train, num_classes=6)\n",
-    "y_test = to_categorical(y_test, num_classes=6)\n"
+    "y_test = to_categorical(y_test, num_classes=6)\n",
+    "# calculate_rolling_stats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# with rolling winodws\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from keras.utils import to_categorical\n",
+    "import numpy as np\n",
+    "\n",
+    "# Set the window size and step size\n",
+    "import numpy as np\n",
+    "\n",
+    "# Set the window size and step size\n",
+    "window_size = 5\n",
+    "step_size = 1\n",
+    "\n",
+    "# Reshape X to 2D format (samples, features)\n",
+    "X = df.values[:, 1:13]\n",
+    "\n",
+    "# Define y\n",
+    "y = df[\"class\"].values\n",
+    "\n",
+    "# Create a sliding window of X with the specified window and step sizes\n",
+    "X_windows = np.array([X[i:i+window_size,:] for i in range(0,X.shape[0]-window_size+1,step_size)])\n",
+    "\n",
+    "# Reshape X_windows to 3D format (samples, timesteps, features)\n",
+    "timesteps = X_windows.shape[1]\n",
+    "n_features = X_windows.shape[2]\n",
+    "X_windows = X_windows.reshape(-1, timesteps, n_features)\n",
+    "\n",
+    "# Create the corresponding y labels for the sliding windows\n",
+    "y_windows = np.array([y[i+window_size-1] for i in range(0,X.shape[0]-window_size+1,step_size)])\n",
+    "y_windows = to_categorical(y_windows, num_classes=6)\n",
+    "\n",
+    "# Split the dataset into training and testing sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X_windows, y_windows, test_size=0.2, random_state=42)\n"
    ]
   },
   {
@@ -508,97 +550,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[[{'loss': [0.3737727701663971,\n",
-       "    0.20794881880283356,\n",
-       "    0.16910861432552338,\n",
-       "    0.15026721358299255,\n",
-       "    0.1377463936805725,\n",
-       "    0.1288413107395172,\n",
-       "    0.12181305140256882,\n",
-       "    0.11614194512367249,\n",
-       "    0.11240524053573608,\n",
-       "    0.10832643508911133],\n",
-       "   'accuracy': [0.869893491268158,\n",
-       "    0.9292250275611877,\n",
-       "    0.942670464515686,\n",
-       "    0.9492955207824707,\n",
-       "    0.9535328149795532,\n",
-       "    0.9564352035522461,\n",
-       "    0.9587457776069641,\n",
-       "    0.9607663154602051,\n",
-       "    0.9618424773216248,\n",
-       "    0.9633219838142395],\n",
-       "   'val_loss': [0.24373289942741394,\n",
-       "    0.18656888604164124,\n",
-       "    0.16469846665859222,\n",
-       "    0.14994318783283234,\n",
-       "    0.1400148570537567,\n",
-       "    0.1333574503660202,\n",
-       "    0.1260184347629547,\n",
-       "    0.12191760540008545,\n",
-       "    0.12179628014564514,\n",
-       "    0.11670263856649399],\n",
-       "   'val_accuracy': [0.9163539409637451,\n",
-       "    0.9369800090789795,\n",
-       "    0.94365394115448,\n",
-       "    0.949455738067627,\n",
-       "    0.9524986743927002,\n",
-       "    0.9549078941345215,\n",
-       "    0.9580202102661133,\n",
-       "    0.9595680832862854,\n",
-       "    0.9592116475105286,\n",
-       "    0.9609782695770264]}],\n",
-       " [{'loss': [0.38682350516319275,\n",
-       "    0.21463936567306519,\n",
-       "    0.1756785660982132,\n",
-       "    0.1552341729402542,\n",
-       "    0.14175163209438324,\n",
-       "    0.13308559358119965,\n",
-       "    0.12505704164505005,\n",
-       "    0.11946100741624832,\n",
-       "    0.11475060880184174,\n",
-       "    0.11082107573747635],\n",
-       "   'accuracy': [0.8657949566841125,\n",
-       "    0.9274487495422363,\n",
-       "    0.9409234523773193,\n",
-       "    0.9476422071456909,\n",
-       "    0.9524635672569275,\n",
-       "    0.9552369713783264,\n",
-       "    0.9578707814216614,\n",
-       "    0.9597663283348083,\n",
-       "    0.9615153670310974,\n",
-       "    0.9626803994178772],\n",
-       "   'val_loss': [0.24910962581634521,\n",
-       "    0.18595626950263977,\n",
-       "    0.16837716102600098,\n",
-       "    0.15027904510498047,\n",
-       "    0.13814391195774078,\n",
-       "    0.13231267035007477,\n",
-       "    0.12744377553462982,\n",
-       "    0.12178369611501694,\n",
-       "    0.11872505396604538,\n",
-       "    0.11488476395606995],\n",
-       "   'val_accuracy': [0.9165696501731873,\n",
-       "    0.9375082850456238,\n",
-       "    0.9425503611564636,\n",
-       "    0.9493648409843445,\n",
-       "    0.9536275863647461,\n",
-       "    0.9554352164268494,\n",
-       "    0.9578619599342346,\n",
-       "    0.9593678712844849,\n",
-       "    0.9602643251419067,\n",
-       "    0.9617194533348083]}]]"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'model_histories' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m model_histories\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'model_histories' is not defined"
+     ]
     }
    ],
    "source": [
