--- a/DL-Modelle.ipynb
+++ b/DL-Modelle.ipynb
@@ -16,9 +16,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[PhysicalDevice(name='/physical_device:CPU:0', device_type='CPU')]\n"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow as tf\n",
     "from sklearn.model_selection import KFold\n",
@@ -48,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,9 +74,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>time</th>\n",
+       "      <th>Accelerometer_x</th>\n",
+       "      <th>Accelerometer_y</th>\n",
+       "      <th>Accelerometer_z</th>\n",
+       "      <th>Gyroscope_x</th>\n",
+       "      <th>Gyroscope_y</th>\n",
+       "      <th>Gyroscope_z</th>\n",
+       "      <th>Magnetometer_x</th>\n",
+       "      <th>Magnetometer_y</th>\n",
+       "      <th>Magnetometer_z</th>\n",
+       "      <th>Orientation_qx</th>\n",
+       "      <th>Orientation_qy</th>\n",
+       "      <th>Orientation_qz</th>\n",
+       "      <th>id</th>\n",
+       "      <th>user</th>\n",
+       "      <th>class</th>\n",
+       "      <th>id_combined</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2023-02-27 15:02:17.156</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>9.722</td>\n",
+       "      <td>1.278</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.21775</td>\n",
+       "      <td>-0.719579</td>\n",
+       "      <td>0.631111</td>\n",
+       "      <td>01_SamsungA22-2023-02-27_15-02-03</td>\n",
+       "      <td>Ben_Tran</td>\n",
+       "      <td>Laufen</td>\n",
+       "      <td>01_SamsungA22-2023-02-27_15-02-03Ben_TranLaufen</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0                     time  Accelerometer_x  Accelerometer_y  \\\n",
+       "0           1  2023-02-27 15:02:17.156              0.0            9.722   \n",
+       "\n",
+       "   Accelerometer_z  Gyroscope_x  Gyroscope_y  Gyroscope_z  Magnetometer_x  \\\n",
+       "0            1.278          0.0          0.0          0.0             0.0   \n",
+       "\n",
+       "   Magnetometer_y  Magnetometer_z  Orientation_qx  Orientation_qy  \\\n",
+       "0             0.0             0.0        -0.21775       -0.719579   \n",
+       "\n",
+       "   Orientation_qz                                 id      user   class  \\\n",
+       "0        0.631111  01_SamsungA22-2023-02-27_15-02-03  Ben_Tran  Laufen   \n",
+       "\n",
+       "                                       id_combined  \n",
+       "0  01_SamsungA22-2023-02-27_15-02-03Ben_TranLaufen  "
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# read the CSV file into a DataFrame\n",
     "df = pd.read_csv(\"Alle_Messungen_trimmed.csv\") \n",
@@ -77,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,9 +269,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "Epoch 2/10\n"
+     ]
+    }
+   ],
    "source": [
     "# Load data and preprocess\n",
     "# split train dataset into x_train and y_train\n",
