--- a/DL-Modelle.ipynb
+++ b/DL-Modelle.ipynb
@@ -16,9 +16,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[PhysicalDevice(name='/physical_device:CPU:0', device_type='CPU')]\n"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow as tf\n",
     "from sklearn.model_selection import KFold\n",
@@ -30,12 +38,11 @@
     "import tensorflow as tf\n",
     "from sklearn.preprocessing import LabelEncoder\n",
     "from sklearn import model_selection as ms\n",
-    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import train_test_split, TimeSeriesSplit\n",
     "from keras.utils import to_categorical\n",
     "from sklearn.model_selection import train_test_split\n",
     "from keras.utils import to_categorical\n",
     "import os\n",
-    "import datetime\n",
     "from tensorflow.keras.callbacks import TensorBoard\n",
     "\n",
     "tf.debugging.set_log_device_placement(False)\n",
@@ -59,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,9 +84,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>time</th>\n",
+       "      <th>Accelerometer_x</th>\n",
+       "      <th>Accelerometer_y</th>\n",
+       "      <th>Accelerometer_z</th>\n",
+       "      <th>Gyroscope_x</th>\n",
+       "      <th>Gyroscope_y</th>\n",
+       "      <th>Gyroscope_z</th>\n",
+       "      <th>Magnetometer_x</th>\n",
+       "      <th>Magnetometer_y</th>\n",
+       "      <th>Magnetometer_z</th>\n",
+       "      <th>Orientation_qx</th>\n",
+       "      <th>Orientation_qy</th>\n",
+       "      <th>Orientation_qz</th>\n",
+       "      <th>id</th>\n",
+       "      <th>user</th>\n",
+       "      <th>class</th>\n",
+       "      <th>id_combined</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2023-02-27 15:02:17.156</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>9.722</td>\n",
+       "      <td>1.278</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.21775</td>\n",
+       "      <td>-0.719579</td>\n",
+       "      <td>0.631111</td>\n",
+       "      <td>01_SamsungA22-2023-02-27_15-02-03</td>\n",
+       "      <td>Ben_Tran</td>\n",
+       "      <td>Laufen</td>\n",
+       "      <td>01_SamsungA22-2023-02-27_15-02-03Ben_TranLaufen</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0                     time  Accelerometer_x  Accelerometer_y  \\\n",
+       "0           1  2023-02-27 15:02:17.156              0.0            9.722   \n",
+       "\n",
+       "   Accelerometer_z  Gyroscope_x  Gyroscope_y  Gyroscope_z  Magnetometer_x  \\\n",
+       "0            1.278          0.0          0.0          0.0             0.0   \n",
+       "\n",
+       "   Magnetometer_y  Magnetometer_z  Orientation_qx  Orientation_qy  \\\n",
+       "0             0.0             0.0        -0.21775       -0.719579   \n",
+       "\n",
+       "   Orientation_qz                                 id      user   class  \\\n",
+       "0        0.631111  01_SamsungA22-2023-02-27_15-02-03  Ben_Tran  Laufen   \n",
+       "\n",
+       "                                       id_combined  \n",
+       "0  01_SamsungA22-2023-02-27_15-02-03Ben_TranLaufen  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# read the CSV file into a DataFrame\n",
     "df = pd.read_csv(\"Alle_Messungen_trimmed.csv\") \n",
@@ -88,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,10 +237,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.model_selection import TimeSeriesSplit\n",
+    "\n",
     "# Set the window size and step size\n",
     "window_size = 5\n",
     "step_size = 1\n",
@@ -167,13 +265,68 @@
     "y_windows = np.array([y[i+window_size-1] for i in range(0,X.shape[0]-window_size+1,step_size)])\n",
     "y_windows = to_categorical(y_windows, num_classes=6)\n",
     "\n",
-    "# Split the dataset into training and testing sets\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X_windows, y_windows, test_size=0.2, random_state=42)\n"
+    "# Create the time-series cross-validator\n",
+    "tscv = TimeSeriesSplit(n_splits=5)\n",
+    "\n",
+    "# Split the dataset into training and testing sets using time-series cross-validation\n",
+    "for train_index, test_index in tscv.split(X_windows):\n",
+    "    X_train, X_test = X_windows[train_index], X_windows[test_index]\n",
+    "    y_train, y_test = y_windows[train_index], y_windows[test_index]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 6\u001b[0m\n\u001b[0;32m      3\u001b[0m step_size \u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[0;32m      5\u001b[0m \u001b[39m# Reshape X to 2D format (samples, features)\u001b[39;00m\n\u001b[1;32m----> 6\u001b[0m X \u001b[39m=\u001b[39m df\u001b[39m.\u001b[39mvalues[:, \u001b[39m1\u001b[39m:\u001b[39m13\u001b[39m]\n\u001b[0;32m      8\u001b[0m \u001b[39m# Define y\u001b[39;00m\n\u001b[0;32m      9\u001b[0m y \u001b[39m=\u001b[39m df[\u001b[39m\"\u001b[39m\u001b[39mclass\u001b[39m\u001b[39m\"\u001b[39m]\u001b[39m.\u001b[39mvalues\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# Set the window size and step size\n",
+    "window_size = 5\n",
+    "step_size = 1\n",
+    "\n",
+    "# Reshape X to 2D format (samples, features)\n",
+    "X = df.values[:, 1:13]\n",
+    "\n",
+    "# Define y\n",
+    "y = df[\"class\"].values\n",
+    "\n",
+    "# Create a sliding window of X with the specified window and step sizes\n",
+    "X_windows = np.array([X[i:i+window_size,:] for i in range(0,X.shape[0]-window_size+1,step_size)])\n",
+    "\n",
+    "# Reshape X_windows to 3D format (samples, timesteps, features)\n",
+    "timesteps = X_windows.shape[1]\n",
+    "n_features = X_windows.shape[2]\n",
+    "X_windows = X_windows.reshape(-1, timesteps, n_features)\n",
+    "\n",
+    "# Create the corresponding y labels for the sliding windows\n",
+    "y_windows = np.array([y[i+window_size-1] for i in range(0,X.shape[0]-window_size+1,step_size)])\n",
+    "y_windows = to_categorical(y_windows, num_classes=6)\n",
+    "\n",
+    "# Create the time-series cross-validator\n",
+    "tscv = TimeSeriesSplit(n_splits=5)\n",
+    "\n",
+    "# Split the dataset into training and testing sets using time-series cross-validation\n",
+    "for train_index, test_index in tscv.split(X_windows):\n",
+    "    X_train, X_test = X_windows[train_index], X_windows[test_index]\n",
+    "    y_train, y_test = y_windows[train_index], y_windows[test_index]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,62 +403,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7805/7805 [==============================] - 124s 16ms/step - loss: 0.2577 - accuracy: 0.9111 - val_loss: 0.1506 - val_accuracy: 0.9486\n",
-      "Epoch 2/10\n",
-      "7805/7805 [==============================] - 117s 15ms/step - loss: 0.1257 - accuracy: 0.9571 - val_loss: 0.1105 - val_accuracy: 0.9617\n",
-      "Epoch 3/10\n",
-      "7805/7805 [==============================] - 117s 15ms/step - loss: 0.0951 - accuracy: 0.9674 - val_loss: 0.0908 - val_accuracy: 0.9688\n",
-      "Epoch 4/10\n",
-      "7805/7805 [==============================] - 117s 15ms/step - loss: 0.0803 - accuracy: 0.9723 - val_loss: 0.0800 - val_accuracy: 0.9729\n",
-      "Epoch 5/10\n",
-      "7805/7805 [==============================] - 118s 15ms/step - loss: 0.0705 - accuracy: 0.9757 - val_loss: 0.0770 - val_accuracy: 0.9743\n",
-      "Epoch 6/10\n",
-      "7805/7805 [==============================] - 118s 15ms/step - loss: 0.0640 - accuracy: 0.9779 - val_loss: 0.0688 - val_accuracy: 0.9770\n",
-      "Epoch 7/10\n",
-      "7805/7805 [==============================] - 117s 15ms/step - loss: 0.0595 - accuracy: 0.9795 - val_loss: 0.0663 - val_accuracy: 0.9780\n",
-      "Epoch 8/10\n",
-      "7805/7805 [==============================] - 113s 14ms/step - loss: 0.0560 - accuracy: 0.9805 - val_loss: 0.0690 - val_accuracy: 0.9768\n",
-      "Epoch 9/10\n",
-      "7805/7805 [==============================] - 115s 15ms/step - loss: 0.0525 - accuracy: 0.9816 - val_loss: 0.0697 - val_accuracy: 0.9764\n",
-      "Epoch 10/10\n",
-      "7805/7805 [==============================] - 115s 15ms/step - loss: 0.0501 - accuracy: 0.9826 - val_loss: 0.0630 - val_accuracy: 0.9793\n",
-      "31219/31219 [==============================] - 48s 2ms/step - loss: 0.0630 - accuracy: 0.9793\n",
       "Epoch 1/10\n",
-      "7805/7805 [==============================] - 120s 15ms/step - loss: 0.2551 - accuracy: 0.9116 - val_loss: 0.1456 - val_accuracy: 0.9500\n",
-      "Epoch 2/10\n",
-      "7805/7805 [==============================] - 123s 16ms/step - loss: 0.1241 - accuracy: 0.9573 - val_loss: 0.1100 - val_accuracy: 0.9620\n",
-      "Epoch 3/10\n",
-      "7805/7805 [==============================] - 119s 15ms/step - loss: 0.0943 - accuracy: 0.9674 - val_loss: 0.0922 - val_accuracy: 0.9678\n",
-      "Epoch 4/10\n",
-      "7805/7805 [==============================] - 120s 15ms/step - loss: 0.0790 - accuracy: 0.9727 - val_loss: 0.0786 - val_accuracy: 0.9731\n",
-      "Epoch 5/10\n",
-      "7805/7805 [==============================] - 118s 15ms/step - loss: 0.0693 - accuracy: 0.9760 - val_loss: 0.0786 - val_accuracy: 0.9724\n",
-      "Epoch 6/10\n",
-      "7805/7805 [==============================] - 119s 15ms/step - loss: 0.0629 - accuracy: 0.9781 - val_loss: 0.0703 - val_accuracy: 0.9762\n",
-      "Epoch 7/10\n",
-      "7805/7805 [==============================] - 120s 15ms/step - loss: 0.0582 - accuracy: 0.9798 - val_loss: 0.0645 - val_accuracy: 0.9780\n",
-      "Epoch 8/10\n",
-      "7805/7805 [==============================] - 122s 16ms/step - loss: 0.0545 - accuracy: 0.9810 - val_loss: 0.0643 - val_accuracy: 0.9785\n",
-      "Epoch 9/10\n",
-      "7805/7805 [==============================] - 124s 16ms/step - loss: 0.0514 - accuracy: 0.9821 - val_loss: 0.0617 - val_accuracy: 0.9790\n",
-      "Epoch 10/10\n",
-      "7805/7805 [==============================] - 121s 16ms/step - loss: 0.0492 - accuracy: 0.9829 - val_loss: 0.0639 - val_accuracy: 0.9784\n",
-      "31219/31219 [==============================] - 50s 2ms/step - loss: 0.0639 - accuracy: 0.9784\n",
-      "15610/15610 [==============================] - 25s 2ms/step - loss: 0.0641 - accuracy: 0.9790\n"
+      "1190/8130 [===>..........................] - ETA: 1:32 - loss: 0.3221 - accuracy: 0.8874"
      ]
     }
    ],
    "source": [
     "# Create a function for training models with TensorBoard\n",
+    "\n",
+    "x_train = X_train\n",
+    "x_test = X_test\n",
+    "y_train = y_train\n",
+    "y_test = y_test\n",
+    "\n",
     "def train_model_with_tensorboard(model_creator, train_x, train_y, test_x, test_y, model_name):\n",
-    "    log_dir = os.path.join(\"logs\", model_name, datetime.datetime.now().strftime(\"%Y%m%d-%H%M%S\"))\n",
+    "    log_dir = os.path.join(\"logs\", model_name, datetime.now().strftime(\"%Y%m%d-%H%M%S\"))\n",
     "    tensorboard_callback = TensorBoard(log_dir=log_dir, histogram_freq=1)\n",
     "\n",
     "    model = model_creator()\n",
